--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -63,6 +63,10 @@
                                         placeholder="Email Address" required>
                                 </div>
                                 <div class="form-group">
+                                    <input type="business" name="business" class="form-control form-control-user"
+                                        placeholder="Business Name" required>
+                                </div>
+                                <div class="form-group">
                                     <label class="small">Profile Image (optional)</label>
                                     <input type="file" name="profile_img" class="form-control form-control-user">
                                 </div>
