--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -40,6 +40,11 @@
                         <input type="text" name="username" class="form-control" value="{{ user.username }}" required>
                     </div>
 
+                    <div class="col-md-6 mb-3">
+                        <label>Business Name</label>
+                        <input type="text" name="business" class="form-control" value="{{ vendor.business_name }}" required>
+                    </div>
+
                     <!-- Profile Image -->
                     <div class="col-md-12 mb-3">
                         <label>Profile Image</label><br>
