--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -42,6 +42,7 @@
 
                 <!-- Product Details Section -->
                 <div class="col-md-6 details-container">
+                    <h6 class="fw-bold text-muted">Vendor: {{ product.vendor.business_name }}</h6>
                     <h2 class="fw-bold">{{ product.name }}</h2>
                     <p class="text-muted">{{ product.description }}</p>
                     <h4 class="fw-bold price">Ksh {{ product.price }}</h4>
