Remaining: charts, search functionality, test payment & better colour handling

--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -28,6 +28,7 @@
                         <tr>
                             <th>Image</th>
                             <th>Title</th>
+                            <th>Pieces</th>
                             <th>Gender</th>
                             <th>Type</th>
                             <th>Price</th>
@@ -42,6 +43,7 @@
                         <tr>
                             <td><img src="{{ product.display_image.url }}" width="50" height="50" /></td>
                             <td>{{ product.title }}</td>
+                            <td>{{ product.quantity }}</td>
                             <td>{{ product.gender }}</td>
                             <td>{{ product.type }}</td>
                             <td>{{ product.price }}</td>
@@ -79,6 +81,7 @@
                         <tr>
                             <th>Image</th>
                             <th>Title</th>
+                            <th>Pieces</th>
                             <th>Gender</th>
                             <th>Type</th>
                             <th>Price</th>
