--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -41,8 +41,8 @@
 
 						<div class="col-md-6 mb-3">
 							<label>Pieces</label>
-							<input type="number" name="pieces" class="form-control"
-								value="{{ product.pieces }}" required>
+							<input type="number" name="quantity" class="form-control"
+								value="{{ product.quantity }}" required>
 						</div>
 
 						<!-- Category Dropdown -->
